<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:bindable="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="feliperrm.com.wordscrambler.ui.statistics.StatisticsViewModel" />
    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        tools:context=".ui.menu.StatisticsFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:shadowColor="@color/black_shadow_color"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="4"
                android:text="@string/statistics"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="32sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:text="@string/time_played"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:text="@{viewModel.timePlayed}"
                        android:textColor="@color/colorPrimary"
                        android:textSize="22sp"
                        tools:text="673" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:text="@string/seconds" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:text="@string/sessions"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:text="@{viewModel.sessionsPlayed}"
                        android:textColor="@color/colorPrimary"
                        android:textSize="22sp"
                        tools:text="46" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:text="@string/sessions_played" />

                </LinearLayout>


            </LinearLayout>

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/answersPieChart"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="12dp"
                android:visibility="@{(viewModel.rightAnswers == null &amp;&amp; viewModel.wrongAnswers == null) ? View.GONE : View.VISIBLE}"
                bindable:pieEntries="@{viewModel.answersPieEntries}" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical"
                android:visibility="@{viewModel.hardestWord == null ? View.GONE : View.VISIBLE}">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/hardest_word_guess"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@{viewModel.hardestWord}"
                    android:textColor="@color/colorPrimary"
                    android:textSize="22sp"
                    tools:text="Pineapple" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@{@plurals/time_elapsed(viewModel.hardestWordSeconds, viewModel.hardestWordSeconds)}"
                    tools:text="83 seconds" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="40dp"
                android:orientation="vertical"
                android:visibility="@{viewModel.easiestWord == null ? View.GONE : View.VISIBLE}">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/easiest_word_guess"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@{viewModel.easiestWord}"
                    android:textColor="@color/colorPrimary"
                    android:textSize="22sp"
                    tools:text="Car" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@{@plurals/time_elapsed(viewModel.easiestWordSeconds, viewModel.easiestWordSeconds)}"
                    tools:text="83 seconds" />

            </LinearLayout>

        </LinearLayout>


    </ScrollView>
</layout>